--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "fast-glob": "^3.3.3"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^8.6.0",
-    "@storybook/addon-essentials": "^8.6.0",
-    "@storybook/web-components-vite": "^8.6.0",
+    "@storybook/addon-a11y": "^10.0.0",
+    "@storybook/addon-docs": "^10.0.0",
+    "@storybook/web-components-vite": "^10.0.0",
     "@types/node": "^22.0.0",
     "eslint": "^9.0.0",
     "lit": "^3.2.0",
+    "storybook": "^10.0.0",
     "typescript": "^5.7.0",
     "vite": "^6.0.0"
   },
