--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-a11y": "10.2.13",
-    "@storybook/addon-docs": "10.2.13",
-    "@storybook/web-components-vite": "10.2.13",
+    "@storybook/addon-a11y": "^10.0.0",
+    "@storybook/addon-docs": "^10.0.0",
+    "@storybook/web-components-vite": "^10.0.0",
     "@types/node": "^22.0.0",
     "eslint": "^9.0.0",
     "lit": "^3.2.0",
     "semantic-release": "^25.0.0",
-    "storybook": "10.2.13",
+    "storybook": "^10.0.0",
     "typescript": "^5.7.0",
     "vite": "^6.0.0"
   },
