--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "./storybook/main": "./dist/storybook/main.js",
     "./storybook/preview": "./dist/storybook/preview.js",
     "./tokens/*": "./dist/tokens/*.js",
-    "./components/*": "./dist/components/*.js"
+    "./components/*": "./dist/components/*.js",
+    "./lint/eslint": "./dist/lint/eslint.config.js",
+    "./lint/prettier": "./dist/lint/prettier.config.js",
+    "./testing/vitest": "./dist/testing/vitest.config.js"
   },
   "files": [
     "dist/",
@@ -21,11 +24,17 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src/",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
     "clean": "rm -rf dist/"
   },
   "dependencies": {
-    "fast-glob": "^3.3.3"
+    "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-lit": "^2.0.0",
+    "eslint-plugin-wc": "^2.2.0",
+    "fast-glob": "^3.3.3",
+    "typescript-eslint": "^8.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
@@ -36,6 +45,7 @@
     "@types/node": "^22.0.0",
     "eslint": "^9.0.0",
     "lit": "^3.2.0",
+    "prettier": "^3.0.0",
     "semantic-release": "^25.0.0",
     "storybook": "^10.0.0",
     "typescript": "^5.7.0",
